--- a/docs/source/notebooks/prior_knowledge.ipynb
+++ b/docs/source/notebooks/prior_knowledge.ipynb
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +765,7 @@
        "693759   Left Ventricular Hypertrophy   ACE^AGTR2"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +870,7 @@
        "1108109  Mammary Neoplasms, Experimental        SPP1^S1PR1"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1097,7 +1097,7 @@
        "4                                           18261457  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1196,7 +1196,7 @@
        "4  STAT5A    IL2       1  10022878;11435608;17182565;17911616;22854263;2..."
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1226,15 +1226,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db_path = '../../../metalinks.db'"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1243,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1256,13 +1247,13 @@
        " 'Schizophrenia']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "li.resource.get_metalinks_values(db_path, 'disease', 'disease')[0:5]"
+    "li.resource.get_metalinks_values(table_name='disease', column_name='disease')[0:5]"
    ]
   },
   {
@@ -1274,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1353,14 +1344,13 @@
        "4   Dopamine  HMDB0000073  P21728        DRD1"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "li.resource.get_metalinks(db_path,\n",
-    "                          source=['Stich', 'CellPhoneDB', 'NeuronChat'],\n",
+    "li.resource.get_metalinks(source=['Stich', 'CellPhoneDB', 'NeuronChat'],\n",
     "                          tissue_location='Brain',\n",
     "                          biospecimen_location='Cerebrospinal Fluid (CSF)',\n",
     "                          disease='Schizophrenia',\n",
@@ -1378,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1471,15 +1461,8 @@
     }
    ],
    "source": [
-    "li.rs.describe_metalinks(db_path)"
+    "li.rs.describe_metalinks()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
