--- a/docs/source/notebooks/liana_c2c.ipynb
+++ b/docs/source/notebooks/liana_c2c.ipynb
@@ -20,7 +20,9 @@
     "The power of [Tensor-cell2cell](https://github.com/earmingol/cell2cell) is in its ability to decompose latent patterns of intercellular communication in an untargeted manner, in theory being able to handle cell-cell communication results coming from any experimental design, regardless of its complexity.\n",
     "\n",
     "Simply put, tensor_cell2cell uses LIANA’s output by sample to build a 4D tensor, represented by 1) contexts, 2) interactions, 3) sender, and 4) receiver cell types. This tensor is then decomposed into a set of factors, which can be interpreted as low-dimensionality latent variables (vectors) that capture the CCC patterns across contexts.\n",
-    "We will combine LIANA with tensor_cell2cell to decipher potential ligand-receptor interaction changes."
+    "We will combine LIANA with tensor_cell2cell to decipher potential ligand-receptor interaction changes.\n",
+    "\n",
+    "Extensive tutorials combining LIANA & [Tensor-cell2cell](https://www.nature.com/articles/s41467-022-31369-2) are available [here](https://ccc-protocols.readthedocs.io/en/latest/index.html)."
    ]
   },
   {
