add mofapy2 to full deps, re-runs tutos

--- a/docs/source/notebooks/prior_knowledge.ipynb
+++ b/docs/source/notebooks/prior_knowledge.ipynb
@@ -1218,7 +1218,7 @@
    "source": [
     "## Metabolite-Receptor Interactions\n",
     "\n",
-    "Via LIANA+ we also provide access to the MetalinksDB knowledge graph - a customisable database of metabolite-receptor interactions, part of the [BioCypher](https://biocypher.org/) ecosystem.\n",
+    "Via LIANA+ we also provide access to the [MetalinksDB knowledge graph - a customisable database](https://github.com/biocypher/metalinks) of metabolite-receptor interactions, part of the [BioCypher](https://biocypher.org/) ecosystem. For more information please refer to [Farr et al, 2023](https://www.biorxiv.org/content/10.1101/2023.12.30.573715v1.abstract).\n",
     "\n",
     "Specifically, to enable light-weight access, we have converted the MetalinksDB knowledge graph into a database.\n",
     "\n",
