clickable google collab badge

--- a/docs/source/notebooks/liana_c2c.ipynb
+++ b/docs/source/notebooks/liana_c2c.ipynb
@@ -12,8 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "<a href=\"https://colab.research.google.com/github/saezlab/liana-py/blob/main/docs/source/notebooks/liana_c2c.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/saezlab/liana-py/blob/main/docs/source/notebooks/liana_c2c.ipynb)"
    ]
   },
   {
@@ -50,9 +49,7 @@
     "\n",
     "```python\n",
     "pip install liana cell2cell decoupler omnipath seaborn==0.11\n",
-    "```\n",
-    "\n",
-    "**Running the Notebook on a GPU via Google Collab: https://colab.research.google.com/github/saezlab/liana-py/blob/main/docs/source/notebooks/liana_c2c.ipynb**"
+    "```"
    ]
   },
   {
