update PK tuto to include homology

--- a/docs/source/notebooks/basic_usage.ipynb
+++ b/docs/source/notebooks/basic_usage.ipynb
@@ -500,23 +500,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-warning\">\n",
+    "\n",
+    "## By default, LIANA+ uses **human gene symbols**. See the documentation and the [Prior Knowledge vignette](https://liana-py.readthedocs.io/en/latest/notebooks/prior_knowledge.html) for details and instructions for homology conversion.\n",
+    "    \n",
+    "</div>  "
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "6ef44f96-b2d5-489d-b66e-581a97800766",
    "metadata": {},
    "source": [
     "## Example Run"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-warning\">\n",
-    "\n",
-    "By default, LIANA+ uses **human** gene symbols. Though any other gene identifiers can be used. See the documentation and the Prior Knowledge tutorial for details.\n",
-    "    \n",
-    "</div>  "
    ]
   },
   {
