--- a/docs/source/notebooks/prior_knowledge.ipynb
+++ b/docs/source/notebooks/prior_knowledge.ipynb
@@ -172,14 +172,15 @@
     }
    ],
    "source": [
-    "li.resource.select_resource().head()"
+    "resource = li.rs.select_resource('consensus')\n",
+    "resource.head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All of these resources were pre-generated using the [OmniPath](https://github.com/saezlab/omnipath) meta-database. Though any custom resource can also be passed, including those provided by the user or generated using the `omnipath` client package. \n",
+    "All of the ligand-receptor resource in LIANA+ were pre-generated using the [OmniPath](https://github.com/saezlab/omnipath) meta-database. Though any custom resource can also be passed, including those provided by the user or generated using the `omnipath` client package. \n",
     "\n",
     "Via this client, in addition to ligand-receptor interactions, users can obtain the PubMed IDs of the references (`references`) that were used support each interaction, as well as the database that reported the interaction in the first place. \n",
     "\n",
@@ -451,6 +452,300 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Homology Mapping\n",
+    "\n",
+    "Similarly, LIANA+ provides on demand homology mapping beyond mouse symbols. It utilises the [HCOP database](https://www.genenames.org/help/hcop/) to obtain homologous genes across species. Specifically, we download the resource from the frequently-updated Bulk Download FTP section of the HCOP database: https://ftp.ebi.ac.uk/pub/databases/genenames/hcop/.\n",
+    "\n",
+    "The homology mapping is accessible through the `resource` module:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/liana/resource/_orthology.py:193: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>source</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>132672</th>\n",
+       "      <td>ZYG11B</td>\n",
+       "      <td>zyg11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>132673</th>\n",
+       "      <td>ZYG11B</td>\n",
+       "      <td>zyg11l</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>132674</th>\n",
+       "      <td>ZYX</td>\n",
+       "      <td>zyx</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>132676</th>\n",
+       "      <td>ZZEF1</td>\n",
+       "      <td>zzef1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>132677</th>\n",
+       "      <td>ZZZ3</td>\n",
+       "      <td>zzz3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        source  target\n",
+       "132672  ZYG11B   zyg11\n",
+       "132673  ZYG11B  zyg11l\n",
+       "132674     ZYX     zyx\n",
+       "132676   ZZEF1   zzef1\n",
+       "132677    ZZZ3    zzz3"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# let's say we are interested in zebrafish homologs of human genes\n",
+    "map_df = li.rs.get_hcop_orthologs(url='https://ftp.ebi.ac.uk/pub/databases/genenames/hcop/human_zebrafish_hcop_fifteen_column.txt.gz',\n",
+    "                                   columns=['human_symbol', 'zebrafish_symbol'],\n",
+    "                                   # NOTE: HCOP integrates multiple resource, so we can filter out mappings in at least 3 of them for confidence\n",
+    "                                   min_evidence=3\n",
+    "                                   )\n",
+    "# rename the columns to source and target, respectively for the original organism and the target organism\n",
+    "map_df = map_df.rename(columns={'human_symbol':'source', 'zebrafish_symbol':'target'})\n",
+    "map_df.tail()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we've obtained the homologous genes, let's convert the resource to those genes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zfish = li.rs.translate_resource(resource,\n",
+    "                                 map_df=map_df,\n",
+    "                                 columns=['ligand', 'receptor'],\n",
+    "                                 replace=True,\n",
+    "                                 # NOTE that we need to define the threshold of redundancies for the mapping\n",
+    "                                 # in this case, we would keep mappings as long as they don't map to more than 2 zebrafish genes\n",
+    "                                 one_to_many=3\n",
+    "                                 )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Obtain Mouse Homologs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/liana/resource/_orthology.py:193: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ligand</th>\n",
+       "      <th>receptor</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Lgals9</td>\n",
+       "      <td>Ptprc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Lgals9</td>\n",
+       "      <td>Met</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Lgals9</td>\n",
+       "      <td>Cd44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Lgals9</td>\n",
+       "      <td>Lrp1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Lgals9</td>\n",
+       "      <td>Cd47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4619</th>\n",
+       "      <td>Bmp2</td>\n",
+       "      <td>Actr2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4620</th>\n",
+       "      <td>Bmp15</td>\n",
+       "      <td>Actr2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4621</th>\n",
+       "      <td>Csf1</td>\n",
+       "      <td>Csf3r</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4622</th>\n",
+       "      <td>Il36g</td>\n",
+       "      <td>Ifnar1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4623</th>\n",
+       "      <td>Il36g</td>\n",
+       "      <td>Ifnar2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4055 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      ligand receptor\n",
+       "0     Lgals9    Ptprc\n",
+       "1     Lgals9      Met\n",
+       "2     Lgals9     Cd44\n",
+       "3     Lgals9     Lrp1\n",
+       "4     Lgals9     Cd47\n",
+       "...      ...      ...\n",
+       "4619    Bmp2    Actr2\n",
+       "4620   Bmp15    Actr2\n",
+       "4621    Csf1    Csf3r\n",
+       "4622   Il36g   Ifnar1\n",
+       "4623   Il36g   Ifnar2\n",
+       "\n",
+       "[4055 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "map_df = li.rs.get_hcop_orthologs(url='https://ftp.ebi.ac.uk/pub/databases/genenames/hcop/human_mouse_hcop_fifteen_column.txt.gz',\n",
+    "                                  columns=['human_symbol', 'mouse_symbol'],\n",
+    "                                   # NOTE: HCOP integrates multiple resource, so we can filter out mappings in at least 3 of them for confidence\n",
+    "                                   min_evidence=3\n",
+    "                                   )\n",
+    "# rename the columns to source and target, respectively for the original organism and the target organism\n",
+    "map_df = map_df.rename(columns={'human_symbol':'source', 'mouse_symbol':'target'})\n",
+    "\n",
+    "# We will then translate\n",
+    "mouse = li.rs.translate_resource(resource,\n",
+    "                                 map_df=map_df,\n",
+    "                                 columns=['ligand', 'receptor'],\n",
+    "                                 replace=True,\n",
+    "                                 # Here, we will be harsher and only keep mappings that don't map to more than 1 mouse gene\n",
+    "                                 one_to_many=1\n",
+    "                                 )\n",
+    "mouse"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you use HCOP function, please reference the original HCOP papers:\n",
+    "- Eyre, T.A., Wright, M.W., Lush, M.J. and Bruford, E.A., 2007. HCOP: a searchable database of human orthology predictions. Briefings in bioinformatics, 8(1), pp.2-5.\n",
+    "- Yates, B., Gray, K.A., Jones, T.E. and Bruford, E.A., 2021. Updates to HCOP: the HGNC comparison of orthology predictions tool. Briefings in Bioinformatics, 22(6), p.bbab155."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "\n",
+    "All methods of LIANA+ accept a ``resource`` parameter that can be used to pass any custom resource, beyond such from homology conversion.\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Annotating Ligand-Receptors\n",
     "\n",
     "In addition to ligand-receptors, we can also obtain other annotations via [OmniPath](https://github.com/saezlab/omnipath). While these can be tissue locations, TF regulons, cytokine signatures, or other types of annotations, the most common use case is to obtain the pathways that are associated with each ligand-receptor interaction.\n",
@@ -462,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +843,7 @@
        "4  Androgen     SARG  11.386852  2.790209e-40"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +946,7 @@
        "6950      NFkB  LAMB3^CD44  4.055408"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +1060,7 @@
        "693759   Left Ventricular Hypertrophy   ACE^AGTR2"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +1165,7 @@
        "1108109  Mammary Neoplasms, Experimental        SPP1^S1PR1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1097,7 +1392,7 @@
        "4                                           18261457  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1196,7 +1491,7 @@
        "4  STAT5A    IL2       1  10022878;11435608;17182565;17911616;22854263;2..."
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1234,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1247,7 +1542,7 @@
        " 'Schizophrenia']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1265,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1344,7 +1639,7 @@
        "4   Dopamine  HMDB0000073  P21728        DRD1"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1368,7 +1663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
