update mofatalk and mofacell vignettes

--- a/docs/source/notebooks/basic_usage.ipynb
+++ b/docs/source/notebooks/basic_usage.ipynb
@@ -593,7 +593,12 @@
    ],
    "source": [
     "# run cellphonedb\n",
-    "cellphonedb(adata, groupby='bulk_labels', expr_prop=0.1, resource_name='consensus', verbose=True, key_added='cpdb_res')"
+    "cellphonedb(adata,\n",
+    "            groupby='bulk_labels', \n",
+    "            # NOTE by default the resource uses HUMAN gene symbols\n",
+    "            resource_name='consensus',\n",
+    "            expr_prop=0.1,\n",
+    "            verbose=True, key_added='cpdb_res')"
    ]
   },
   {
@@ -1026,7 +1031,11 @@
    ],
    "source": [
     "# Run rank_aggregate\n",
-    "li.mt.rank_aggregate(adata, groupby='bulk_labels', expr_prop=0.1, verbose=True)"
+    "li.mt.rank_aggregate(adata, \n",
+    "                     groupby='bulk_labels',\n",
+    "                     resource_name='consensus',\n",
+    "                     expr_prop=0.1,\n",
+    "                     verbose=True)"
    ]
   },
   {
