make resource being human by default more explicit

--- a/docs/source/notebooks/liana_c2c.ipynb
+++ b/docs/source/notebooks/liana_c2c.ipynb
@@ -507,6 +507,7 @@
     "li.mt.rank_aggregate.by_sample(\n",
     "    adata,\n",
     "    groupby=groupby,\n",
+    "    resource_name='consensus', # NOTE: uses human gene symbols!\n",
     "    sample_key=sample_key, # sample key by which we which to loop\n",
     "    use_raw=False, \n",
     "    verbose=True, # use 'full' to show all verbose information\n",
