--- a/docs/source/notebooks/mofatalk.ipynb
+++ b/docs/source/notebooks/mofatalk.ipynb
@@ -329,7 +329,7 @@
     "li.mt.rank_aggregate.by_sample(\n",
     "    adata,\n",
     "    groupby=groupby,\n",
-    "    resource_name='consensus', # NOTE: uses HUMAN gene symbols\n",
+    "    resource_name='consensus', # NOTE: uses HUMAN gene symbols!\n",
     "    sample_key=sample_key, # sample key by which we which to loop\n",
     "    expr_prop = 0.1,\n",
     "    use_raw=False, \n",
