--- a/docs/source/notebooks/targeted.ipynb
+++ b/docs/source/notebooks/targeted.ipynb
@@ -584,7 +584,7 @@
    "source": [
     "lr_res = li.multi.df_to_lr(adata,\n",
     "                           dea_df=dea_df,\n",
-    "                           resource_name='consensus',\n",
+    "                           resource_name='consensus', # NOTE: uses HUMAN gene symbols!\n",
     "                           expr_prop=0.1, # calculated for adata as passed - used to filter interactions\n",
     "                           groupby=groupby,\n",
     "                           stat_keys=['stat', 'pvalue', 'padj'],\n",
