fix unclosed div

--- a/docs/source/notebooks/basic_usage.ipynb
+++ b/docs/source/notebooks/basic_usage.ipynb
@@ -338,7 +338,7 @@
     "    \n",
     "Methods in liana are **callable** instances of the `Method` class. To obtain further information for each method the user can refer to the methods documentation `?method_name` or `?method.__call__`. Alternatively, users can use the `method.describe` function to get a short summary for each method.\n",
     "\n",
-    "</div>  \n"
+    "</div>\n"
    ]
   },
   {
@@ -503,11 +503,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-warning\">\n",
-    "\n",
-    "## By default, LIANA+ uses **human gene symbols**. See the documentation and the [Prior Knowledge vignette](https://liana-py.readthedocs.io/en/latest/notebooks/prior_knowledge.html) for details and instructions for homology conversion.\n",
-    "    \n",
-    "</div>  "
+    "## By default, LIANA+ uses **human gene symbols**. See the documentation and the [Prior Knowledge vignette](https://liana-py.readthedocs.io/en/latest/notebooks/prior_knowledge.html) for details and instructions for homology conversion.\n"
    ]
   },
   {
