fix issue with missing symbols

--- a/docs/source/notebooks/prior_knowledge.ipynb
+++ b/docs/source/notebooks/prior_knowledge.ipynb
@@ -1533,6 +1533,14 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading database...\n",
+      "Database downloaded and saved to /mnt/97efc476-fe88-4281-aa1a-cf9a249ca294/liana-py/docs/source/notebooks/metalinksdb.db.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "['Menstrual cycle',\n",
