--- a/docs/source/notebooks/sc_multi.ipynb
+++ b/docs/source/notebooks/sc_multi.ipynb
@@ -536,7 +536,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Obtain MetalinksDB Prior Knowledge"
+    "### Obtain MetalinksDB Prior Knowledge"
    ]
   },
   {
