enable batch_key to be passed for min_variance

--- a/docs/source/notebooks/basic_usage.ipynb
+++ b/docs/source/notebooks/basic_usage.ipynb
@@ -550,7 +550,7 @@
     "LIANA will also by default use the 'consensus' resource to infer ligand-receptor interactions. \n",
     "This resource was created as a consensus from the resources literature-curated resources in OmniPath, and uses **human gene symbols**.\n",
     "\n",
-    "For different species, we provide 'mouseconsensus', for any other species you can provide your own resource, or translate LIANA's resources via [decoupler](https://decoupler-py.readthedocs.io/en/latest/notebooks/translate.html).\n",
+    "For different species, we provide 'mouseconsensus', for any other species you can provide your own resource, or translate LIANA's resources as shown [here](https://liana-py.readthedocs.io/en/latest/notebooks/prior_knowledge.html#Homology-Mapping).\n",
     "\n",
     "If you wish to use a different resource, please specify it via the `resource_name` parameter for internal resources, or provide an external one via `resource` or `interactions`.\n",
     "    \n",
