provide method details, acknowledgement to authors

--- a/docs/source/notebooks/basic_usage.ipynb
+++ b/docs/source/notebooks/basic_usage.ipynb
@@ -1681,11 +1681,86 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "f8c53062",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Method Details\n",
+    "(Rendered version of **Supplementary Table 3** from the manuscript)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Method                         | Magnitude                                                                                      | Specificity                                                                                  |\n",
+    "|--------------------------------|------------------------------------------------------------------------------------------------|----------------------------------------------------------------------------------------------|\n",
+    "| CellPhoneDBv2                  | $$LRmean_{k,ij} = \\frac{L_{C_{i}} + R_{C_{j}}}{2}$$                                             | See ρ                                                                                        |\n",
+    "| Geometric Mean                 | $$LRgeometric.mean_{k,ij} = \\sqrt{L_{C_{i}} \\cdot R_{C_{j}}}$$                                 | See ρ                                                                                        |\n",
+    "| CellChat LR probabilities †      | $$LRprob_{k,ij} = \\frac{L^*_{C_{i}} \\cdot R^*_{C_{j}}}{Kh + L^*_{C_{i}} \\cdot R^*_{C_{j}}}$$ where Kh is a normalizing parameter (set to 0.5 by default) and L* & R* are aggregated using Tuckey's Trimean function (See below). | See ρ                                                                                        |\n",
+    "| SingleCellSignalR              | $$LRscore_{k,ij} = \\frac{\\sqrt{L_{C_{i}} R_{C_{j}}}}{\\sqrt{L_{C_{i}} R_{C_{j}}} + \\mu}$$ where $\\mu$ is the mean of the expression matrix M     | -                                                                                            |\n",
+    "| NATMI                          | $$LRproduct_{k,ij} = L_{C_{i}} R_{C_{j}}$$                                                    | $$SpecificityWeight_{k,ij} = \\frac{L_{C_{i}}}{\\sum^{n} L_{C_{i}}} \\cdot \\frac{R_{C_{j}}}{\\sum^{n} R_{C_{j}}}$$ |\n",
+    "| Connectome                     | $$LRproduct_{k,ij} = L_{C_{i}} R_{C_{j}}$$                                                    | $$LRz.mean_{k,ij} = \\frac{z_{L_{C_{i}}} + z_{R_{C_{j}}}}{2}$$   where z is the z-score of the expression matrix M|                                             |\n",
+    "| LogFC‡                         | -                                                                                              | $$LRlog2FC_{k,ij} = \\frac{\\text{Log2FC}_{C_i,L} + \\text{Log2FC}_{C_j,R}}{2}$$                |\n",
+    "| ScSeqComm (intercellular scores only)   | $$LRinterscore_{k,ij} = \\text{min}(P(L_{Ci}), P(R_{Cj}))$$ $$P(X) = \\Phi\\left(\\frac{X - \\mu}{\\sigma / \\sqrt{n}}\\right)$$                              Where $\\Phi$ is the CDF of a normal distribution, μ is the mean, σ is the standard deviation, and n is the number of observations | -                                                                                            |\n",
+    "| LIANA’s Consensus#             | Used flexibly to combine the Magnitude scores of the methods above. By default, uses all except the Geometric mean and CellChat, independently for magnitude and specificity scores. | Same as Magnitude Rank Aggregate but aggregates the specificity scores of different methods.                                                                                          |\n",
+    "\n",
+    "**Shared Notation:**\n",
+    "\n",
+    "- k is the k-th ligand-receptor interaction\n",
+    "- L - expression of ligand L; R - expression of receptor R; See Ѫ\n",
+    "- C - cell cluster\n",
+    "- i - cell group i\n",
+    "- j - cell group j\n",
+    "- M - a library-size normalised and log1p-transformed gene expression matrix\n",
+    "- X - normalised gene expression vector\n",
+    "\n",
+    "**Permutations to calculate specificity (ρ):**\n",
+    "\n",
+    "$$ p\\text{-value}_{k,ij} = \\frac{1}{P} \\sum_{p=1}^{P} [fun_{permuted}(L^*_{C_{i}}, R^*_{C_{j}}) \\geq fun_{observed}(L^*_{C_{i}}, R^*_{C_{j}})]$$\n",
+    "\n",
+    "where P is the number of permutations, and L* and R* are ligand and receptor expressions aggregated by group (cluster) using fun; arithmetic mean for CellPhoneDB and Geometric Mean, and Tuckey’s TriMean for CellChat:\n",
+    "\n",
+    "$$TriMean(X) = \\frac{Q_{0.25}(X) + 2 \\cdot Q_{0.5}(X) + Q_{0.75}(X)}{4}$$\n",
+    "\n",
+    "**Consensus(#)**\n",
+    "\n",
+    "First, a normalised rank matrix [0,1] is generated separately for magnitude and specificity as: \n",
+    "\n",
+    "$$r_{ij} = \\frac{rank_{ij}}{\\max(rank_i)} \\quad (1 \\leq i \\leq m, 1 \\leq j \\leq n)$$\n",
+    "\n",
+    "where m is the number of ranked score vectors, n is the length of each score vector (number of interactions), rankij is the rank of the j-th element (interaction) in the i-th score rank vector, and max(ranki) is the maximum rank in the i-th rank vector.\n",
+    "\n",
+    "For each normalised rank vector r, we then ask how probable it is to obtain rnull(k)<= r(k), where rnull(k) is a rank vector generated under the null hypothesis. The RobustRankAggregate method 9 expresses the probability rnull(k)<= r(k) as k,n(r) through a beta distribution. This entails that we obtain probabilities for each score vector r as:\n",
+    "\n",
+    "$$p(r) = \\underset{1, ..., n}{min} \\beta_k,_n(r) * n$$\n",
+    "\n",
+    "where we take the minimum probability for each interaction across the score vectors, and we apply a Bonferroni multi-testing correction to the P-values by multiplying them by n.\n",
+    "\n",
+    "**Notes:**\n",
+    "- Δ Some differences are expected with the original implementations largely due to different preprocessing steps which LIANA+ harmonised across the different methods. Specifically, LIANA+ considers the minimum score (e.g. average expression) for complex subunits, while some methods consider the mean, geometric mean, or simply do not account for complexes at all.\n",
+    "- † The original CellChat implementation also uses information about mediator proteins and pathways, which are specific to the CellChat resource. Since we wish to keep LIANA+ resource-agnostic, **we do not utilise mediator information**, as such while the remainder of the score calculation is  identical to CellChat's LR probabilities, some differences are anticipated.\n",
+    "- Ѫ While we refer to the genes as ligands and receptors for simplicity, these can represent the gene expression also of membrane-bound or extracellular-matrix proteins, as well as heteromeric complexes for which the minimum expression across subunits is used.\n",
+    "- ‡ 1-vs-rest cell group log2FC for each gene is calculated as $$log2FC = \\log_2\\left(\\text{mean}(X_i)\\right) - \\log_2\\left(\\text{mean}(X_{\\text{not}_i})\\right)$$\n",
+    "- (*) LIANA considers interactions as occurring only if both the ligand and receptor, as well as all of their subunits, are expressed above a certain proportion of cells in both clusters involved in the interaction (0.1 by default). This can be formulated as an indicator function as follows:\n",
+    "$$I \\left\\{ L_{C_j}^{expr.prop} \\geq 0.1 \\text{ and } R_{C_j}^{expr.prop} \\geq 0.1 \\right\\}$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### 🙏 <span style=\"color: darkred;\"> Please consider citing the original methods when using their LIANA+ re-implementations in your work! 🙏 </span>\n",
+    "\n",
+    "*While LIANA+ simply aims to ease ligand-receptor inference, the original authors and developers should be credited for their work.*\n",
+    "\n",
+    "*We acknowledge their valuable contributions and we hope you would too!*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
