--- a/docs/source/notebooks/basic_usage.ipynb
+++ b/docs/source/notebooks/basic_usage.ipynb
@@ -1676,9 +1676,11 @@
     "\n",
     "where we take the minimum probability for each interaction across the score vectors, and we apply a Bonferroni multi-testing correction to the P-values by multiplying them by n.\n",
     "\n",
+    "\n",
     "**Notes:**\n",
+    "\n",
     "- Δ Some differences are expected with the original implementations largely due to different preprocessing steps which LIANA+ harmonised across the different methods. Specifically, LIANA+ considers the minimum score (e.g. average expression) for complex subunits, while some methods consider the mean, geometric mean, or simply do not account for complexes at all.\n",
-    "- † The original [CellChat](https://github.com/jinworks/CellChat) implementation additionally uses information about mediator proteins and pathways, which are specific to the CellChat resource. Since we wish to keep LIANA+ resource-agnostic, **we do not utilise mediator information**, as such while the remainder of the score calculation is  identical to CellChat's LR probabilities, some differences are anticipated.\n",
+    "- † The original [CellChat](https://github.com/jinworks/CellChat) implementation additionally uses information about mediator proteins and pathways, which are specific to the CellChat resource. Since we wish to keep LIANA+ resource-agnostic, **we do not utilise mediator information**, as such while the remainder of the score calculation is identical to CellChat's LR probabilities, some differences are anticipated.\n",
     "- Ѫ While we refer to the genes as ligands and receptors for simplicity, these can represent the gene expression also of membrane-bound or extracellular-matrix proteins, as well as heteromeric complexes for which the minimum expression across subunits is used.\n",
     "- ‡ 1-vs-rest cell group log2FC for each gene is calculated as $$log2FC = \\log_2\\left(\\text{mean}(X_i)\\right) - \\log_2\\left(\\text{mean}(X_{\\text{not}_i})\\right)$$\n",
     "- (*) LIANA considers interactions as occurring only if both the ligand and receptor, as well as all of their subunits, are expressed above a certain proportion of cells in both clusters involved in the interaction (0.1 by default). This can be formulated as an indicator function as follows:\n",
@@ -1690,7 +1692,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "### 🙏 <span style=\"color: darkred;\"> Please consider citing the original methods when using their LIANA+ re-implementations in your work! 🙏 </span>\n",
+    "### 🙏 <span style=\"color: darkred;\"> Please consider citing the original methods when using their LIANA+ adaptations in your work! 🙏 </span>\n",
     "\n",
     "*While LIANA+ simply aims to ease ligand-receptor inference, the original authors and developers should be credited for their work.*\n",
     "\n",
